--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,6 @@
 
 {
   "singleQuote": true,
-  "trailingComma": "all",
-  "prettier/prettier": [
-    "error",
-    {
-      "endOfLine": "auto"
-    }
-  ]
+  "trailingComma": "all"
 }
+
